<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_haul_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="36dp"
        android:text="Tilt"
        android:textSize="32sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginEnd="12dp"
        android:src="@drawable/account_box"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/tv_haul_title" />


    <View
        android:id="@+id/view_haul_top_divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="8dp"
        android:background="#75030000"
        app:layout_constraintTop_toBottomOf="@id/tv_haul_title" />

    <LinearLayout
        android:id="@+id/linear_haul_user_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8dp"
        android:weightSum="3"
        app:layout_constraintTop_toBottomOf="@id/view_haul_top_divider">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:weightSum="2">

            <TextView
                android:id="@+id/tv_haul_user_completed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:textAlignment="center"
                android:textSize="22sp"
                android:textStyle="bold"
                tools:text="15" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:text="@string/jobs_have_been_completed_this_year"
                android:textAlignment="center" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:weightSum="2">

            <TextView
                android:id="@+id/tv_haul_user_mileage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:textAlignment="center"
                android:textSize="22sp"
                android:textStyle="bold"
                tools:text="12,5400" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:text="@string/miles_have_been_driven_this_year"
                android:textAlignment="center" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:weightSum="2">

            <TextView
                android:id="@+id/tv_haul_user_earnings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:textAlignment="center"
                android:textSize="22sp"
                android:textStyle="bold"
                tools:text="$25,680" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:text="@string/has_been_earned_so_far_this_year"
                android:textAlignment="center" />
        </LinearLayout>


    </LinearLayout>

    <View
        android:id="@+id/view_haul_bottom_divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="8dp"
        android:background="#75030000"
        app:layout_constraintTop_toBottomOf="@id/linear_haul_user_container" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container_haul_curernt_job"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/view_haul_bottom_divider">

        <View
            android:id="@+id/view_haul_date_job"
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:layout_margin="12dp"
            android:background="@color/purple_700"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_haul_day"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/purple_200"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="@id/view_haul_date_job"
            app:layout_constraintStart_toStartOf="@id/view_haul_date_job"
            app:layout_constraintTop_toTopOf="@id/view_haul_date_job"
            tools:text="22" />

        <TextView
            android:id="@+id/tv_haul_month"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:textColor="@color/purple_200"
            android:textSize="32sp"
            app:layout_constraintBottom_toBottomOf="@id/view_haul_date_job"
            app:layout_constraintEnd_toEndOf="@id/view_haul_date_job"
            app:layout_constraintStart_toStartOf="@id/view_haul_date_job"
            tools:text="May" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/current_haul"
            android:textAlignment="center"
            android:textColor="#75030000"
            app:layout_constraintBottom_toTopOf="@id/view_haul_date_job"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_haul_origin_city"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:textSize="22sp"
            app:layout_constraintBottom_toBottomOf="@id/view_haul_date_job"
            app:layout_constraintStart_toEndOf="@id/view_haul_date_job"
            app:layout_constraintTop_toTopOf="@id/view_haul_date_job"
            tools:text="Pittsburgh" />

        <TextView
            android:id="@+id/tv_haul_direction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/direction_arrow"
            android:textSize="22sp"
            app:layout_constraintBottom_toBottomOf="@id/tv_haul_origin_city"
            app:layout_constraintStart_toEndOf="@id/tv_haul_origin_city"
            app:layout_constraintTop_toTopOf="@id/tv_haul_origin_city" />

        <TextView
            android:id="@+id/tv_haul_destination_city"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:textSize="22sp"
            app:layout_constraintBottom_toBottomOf="@id/view_haul_date_job"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/view_haul_date_job"
            tools:text="Los Angeles" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:id="@+id/view_haul_bottom_container_divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#75030000"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/container_haul_curernt_job" />

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/refresh_haul_network_call"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/container_haul_curernt_job">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_haul_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

</androidx.constraintlayout.widget.ConstraintLayout>